-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
-
c85d635d5 (dev), deebe647d (6.9)
The attached SVG does not animate correctly with VectorImage. It looks correct with Qt Svg.
| For Gerrit Dashboard: QTBUG-132408 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 616844,3 | VectorImage: Fix issue with animation ending early | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 617634,2 | VectorImage: Fix issue with animation ending early | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |